--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2024"
 [dependencies]
 bootloader = "0.9.0"
 volatile = "0.2.6"
+lazy_static = { version = "1.5.0", features = [ "spin_no_std" ] }
+spin = "0.10.0"
