--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "floof"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+name = "floof"
+test = true
+bench = false
+
 [dependencies]
 bootloader = "0.9.0"
 volatile = "0.2.6"
