--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ bootloader = "0.9.0"
 volatile = "0.2.6"
 lazy_static = { version = "1.5.0", features = [ "spin_no_std" ] }
 spin = "0.10.0"
+
+[package.metadata.bootimage]
+test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
