--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ volatile = "0.2.6"
 lazy_static = { version = "1.5.0", features = [ "spin_no_std" ] }
 spin = "0.10.0"
 x86_64 = "0.15.4"
+uart_16550 = "0.4.0"
 
 [package.metadata.bootimage]
 test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
