--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,5 +17,5 @@ x86_64 = "0.15.4"
 uart_16550 = "0.4.0"
 
 [package.metadata.bootimage]
-test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
+test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"]
 test-success-exit-code = 33 # (0x10 << 1) | 1
