--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,7 @@ test-args = [
     "-display", "none", # make qemu run in bg during test
 ]
 test-success-exit-code = 33 # (0x10 << 1) | 1
+
+[[test]]
+name = "stack_overflow"
+harness = false
