--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ lazy_static = { version = "1.5.0", features = [ "spin_no_std" ] }
 spin = "0.10.0"
 x86_64 = "0.15.4"
 uart_16550 = "0.4.0"
+pic8259 = "0.11.0"
 
 [package.metadata.bootimage]
 test-args = [
