--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ test = true
 bench = false
 
 [dependencies]
-bootloader = "0.9.0"
+bootloader = { version = "0.9.0", features = ["map_physical_memory"] }
 volatile = "0.2.6"
 lazy_static = { version = "1.5.0", features = [ "spin_no_std" ] }
 spin = "0.10.0"
