--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,10 @@ x86_64 = "0.15.4"
 uart_16550 = "0.4.0"
 pic8259 = "0.11.0"
 pc-keyboard = "0.8.0"
+linked_list_allocator = "0.9.0"
+crossbeam-queue = { version = "0.3.11", default-features = false, features = ["alloc"] }
+conquer-once = { version = "0.4.0", default-features = false }
+futures-util = { version = "0.3.4", default-features = false, features = ["alloc"] }
 
 [package.metadata.bootimage]
 test-args = [
